# encmq

./: .gitignore  CMakeLists.txt  README.md  RELNOTES  _config.yml  index.html  index.md  params.json  unix.sh  vs2008.cmd  vs2010.cmd  vs2011.cmd
cmake/: FindZeroMQ.cmake
encmq/: CMakeLists.txt  doxygen.cfg  encmq.dox
encmq/hdr/: internal.h  message.pb.h
encmq/proto/: message.proto
encmq/src/: client.cc  encmq.cc  message.pb.cc  node.cc  publisher.cc  server.cc  subscriber.cc
include/: encmq.h
keygen/: CMakeLists.txt
keygen/src/: keygen.cc
log4cplus/: CMakeLists.txt
protobuf/: CMakeLists.txt
protobuf/hdr/: config.h.cmake
protoc/: CMakeLists.txt
test/: CMakeLists.txt
test/hdr/: msgtest.pb.h
test/proto/: msgtest.proto
test/src/: msgtest.pb.cc  test.cc
zeromq/: CMakeLists.txt
zeromq/hdr/: platform.hpp.cmake
